--- a/client-app/package.json
+++ b/client-app/package.json
@@ -11,6 +11,8 @@
     "@types/react": "^17.0.48",
     "@types/react-dom": "^18.0.6",
     "axios": "^0.27.2",
+    "mobx": "^6.6.1",
+    "mobx-react-lite": "^3.4.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.1",
