--- a/client-app/package.json
+++ b/client-app/package.json
@@ -9,12 +9,16 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.11.47",
     "@types/react": "^17.0.48",
+    "@types/react-calendar": "^3.5.2",
     "@types/react-dom": "^18.0.6",
+    "@types/react-router-dom": "^5.3.2",
     "axios": "^0.27.2",
     "mobx": "^6.6.1",
     "mobx-react-lite": "^3.4.0",
     "react": "^17.0.2",
+    "react-calendar": "^3.7.0",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.1",
     "semantic-ui-react": "^2.1.3",
     "typescript": "^4.7.4",
